# myairflow

./: README.md  pyproject.toml
dags/: after_movie.py  alert.py  hello.py  movie.py  movie_spark.py  myetl.py  seoul.py  virtual.py  wiki_spark.py
pyspark/: movie_meta.py
src/myairflow/: .send_notify.py.swp  DataManager.py  send_notify.py
tests/: .test_notify.py.swp  test_notify.py
